# simple_nlp_answering_system

./: .gitignore  Dockerfile  README.md  eda.ipynb  pyproject.toml  railway.toml  render.yaml  requirements.txt
config/: config.yaml  known_names.json
run_one_time/: get_known_names.py
src/rag/: retriever.py  service.py  spacy_model.py
