[project]
name = "simple-nlp-answering-system"
version = "0.1.0"
description = "Simple NLP answering system with Pinecone embeddings"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pinecone",
    "fastembed",
    "spacy",
    "python-dotenv",
    "pydantic",
    "requests",
    "pyyaml",
    "onnx",
    "onnxruntime",
    "numpy==1.26.4",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "onnxruntime-gpu"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true